--- a/MainProject/MainProject.vcxproj.filters
+++ b/MainProject/MainProject.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\Fields\ValueField.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Util\Const.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Spreadsheet.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Util\Const.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Fields\FieldCoordinate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
