--- a/MainProject/MainProject.vcxproj.filters
+++ b/MainProject/MainProject.vcxproj.filters
@@ -63,4 +63,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="data\spreadsheet.txt" />
+  </ItemGroup>
 </Project>
